# doc/api.yaml
@@ -603,6 +603,7 @@ paths:
                   {
                     convId: "conv_123456",
                     type: "private",
+                    participantNames: ["pippo", "pluto"],
                     participants: ["usr_123", "usr_456"]
                   },
                   {
@@ -1208,6 +1209,16 @@ components:
            minimum: 0
            maximum: 99
            readOnly: true
+        participantNames:
+          type: array
+          description: Display names of participants in the same order of participants array
+          items:
+            type: string
+            minLength: 3
+            maxLength: 16
+            pattern: '^[A-Za-z0-9._-]{3,16}$'
+          minItems: 1
+          maxItems: 100
       required:
         - convId
         - type
